@@ -3,6 +3,6 @@
 #
 
 obj-y := tty_io.o
-obj-y += tty_ldisc.o
+#obj-y += tty_ldisc.o
 obj-y += n_tty.o
 obj-y += n_dummy.o
