@@ -272,3 +272,6 @@ Tue Nov 17 13:24:49 CST 2015
 Sun Nov 22 09:37:33 CST 2015
 - [+] sound/Makefile				[D] :) Sounds like Shit
 - [+] sound/Kconfig
+- [+] drivers/tty/tty_dummy.c			[D] A dummy tty driver
+- [M] drivers/tty/tty_ldisc.c			[D] Line discipline layer
+- [M] drivers/console/console.c			[D] Bind to standard termios
